@@ -13,6 +13,8 @@ ikiwiki (3.04) UNRELEASED; urgency=low
     file into. Closes: #514384
   * shortcut: If default_pageext is set, first look for
     shortcuts.default_pageext.
+  * Allow comments, rename, remove, and attazhments plugins to be used
+    even if the editpage plugin is disabled.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 31 Jan 2009 19:04:45 -0500
 
